# drawing-annotations-evaluator

./: .gitignore  ENVIRONMENT.md  README.md  pyproject.toml
scripts/: README.md  download_coco_subset.py  generate_predictions.py
src/: eval.py  visualizer.py
