[project]
name = "drawing-annotations-evaluator"
version = "0.1.0"
description = "Evaluation utilities for drawing annotations using COCO tooling."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cython",
    "numpy",
    "pillow",
    "polars",
    "pycocotools==2.0.11",
    "tqdm",
    "rich",
    "tabulate",
]
